k8s/deployments/minio/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: minio
spec:
  ports:
  - name: http
    port: 9000
    protocol: TCP
    targetPort: 9000
  - name: http-ui
    port: 9001
    protocol: TCP
    targetPort: 9001
  selector:
    app: minio
  type: ClusterIP
